Fix Alignment Of Display Divs

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,7 @@ body {
 }
 
 #weatherInfo > div div {
-  border-radius: 16px;
-  padding: 16px;
+  border-radius: 12px;
 }
 
 button {
